fix bug on safari 13 with content invisible and unscrollable

--- a/front/src/styles/lck/_layout.scss
+++ b/front/src/styles/lck/_layout.scss
@@ -30,11 +30,6 @@
   @media screen and (min-width: 900px) {
     display: grid;
     grid-template-columns: auto 1fr;
-
-    &-content {
-      display: grid;
-      grid-template-columns: auto 1fr;
-    }
   }
 }
 
@@ -42,6 +37,9 @@
   overflow: auto;
   height: 100%;
   min-height: 100%;
+  @media screen and (min-width: 900px) {
+    margin-left: var(--sidebar-app-width);
+  }
 }
 
 .main-container {
